deployment/k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aqis-web
spec:
  selector:
    app: aqis-web
  ports:
    - port: 80
      targetPort: 80
